--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,13 @@
 html, body {
   height: 100%;
   margin: 0;
-  background: var(--bg);
   color: var(--text);
+
+  background-image: url("./progress-pride.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 /* THIS is what your JS toggles */
