--- a/styles.css
+++ b/styles.css
@@ -282,3 +282,7 @@ main {
     padding-right: max(16px, env(safe-area-inset-right));
   }
 }
+main {
+  margin-left: auto;
+  margin-right: auto;
+}
